tests/conformance/v1/fixtures/parse/valid/app_with_list.ai
app "TestApp" {
    tags: ["test", "demo", "example"]
}