tests/conformance/v1/fixtures/parse/invalid/malformed_block.ai
app "TestApp" {
    invalid syntax here
}